--- a/src/components/portal/landing.astro
+++ b/src/components/portal/landing.astro
@@ -5,38 +5,20 @@ var HTML = `
 <style>
     .hero {
         padding: 0 10vw;
+
+        height: 100%;
+        width: calc(100% - 20vw);
+
         display: flex;
         justify-content: center;
         flex-direction: column;
-        width: calc(100% - 20vw);
+
         --bg-color: #6c78e5;
         background-image: url('/assets/header.svg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
         color: white;
-    
-        &:not(&.fullHeight) {
-            min-height: 37.5vw;
-        }
-        
-        &.fullHeight {
-            min-height: calc(100% - 210px);
-            flex: 1;
-            align-items: center;
-        }
-    
-        & > div {
-            display: flex;
-            justify-content: center;
-            align-items: flex-start;
-            flex-direction: column;
-            width: 100%;
-
-            & > * {
-                max-width: fit-content;
-            }
-        }
     
         & h1:not(#menu > h1):not(#whymakethisclub), & h2, & h3 {
             --shadow-color: #0a0a52;
@@ -62,11 +44,6 @@ var HTML = `
             font-weight: 400;
             font-size: 1.2rem;
             max-width: 56.59ch;
-        }
-
-        &:not(.error) > section {
-            --bg: white;
-            color: black;
         }
     }
 </style>
