--- a/src/components/portal/landing.astro
+++ b/src/components/portal/landing.astro
@@ -49,7 +49,9 @@ var HTML = `
 </style>
 <main id="portal">
     <section class="hero" id="portal" style="min-height: 100px !important; display: flex; align-items: center;">
-        <h1>Member Portal</h1>
+        <ul id="menu">
+            <h1>Member Portal</h1>
+        </ul>
     </section>
 </main>`
 
