--- a/src/pages/portal.astro
+++ b/src/pages/portal.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro'
 import '../styles/pages/portal.scss'
+import '../styles/globals.scss'
 ---
 <Layout title="Member Portal">
   <main id="content" class="login-parent">
