--- a/src/pages/portal.astro
+++ b/src/pages/portal.astro
@@ -1,10 +1,11 @@
 ---
 import Layout from '../layouts/Layout.astro'
 import '../styles/pages/portal.scss'
+import '../styles/components/hero.scss'
 import '../styles/globals.scss'
 ---
 <Layout title="Member Portal">
-  <main id="content" class="login-parent">
+  <main id="content" class="portal login-parent">
       <form class="login">
         <input type="password" id="password" />
         <button class="btn">Submit</button>
