--- a/src/pages/portal.astro
+++ b/src/pages/portal.astro
@@ -6,10 +6,10 @@ import '../styles/globals.scss'
 ---
 <Layout title="Member Portal">
   <main id="content" class="portal login-parent">
-      <form class="login">
+      <div class="login">
         <input type="password" id="password" />
         <button class="btn">Submit</button>
-      </form>
+      </div>
   </main>
   <script is:inline src="/portalpw.js"></script>
 </Layout>
