--- a/src/pages/portal.astro
+++ b/src/pages/portal.astro
@@ -5,11 +5,13 @@ import '../styles/components/hero.scss'
 import '../styles/globals.scss'
 ---
 <Layout title="Member Portal">
-  <main id="content" class="portal login-parent">
+  <main id="content" class="portal">
+    <section class="login-parent">
       <div class="login">
         <input type="password" id="password" />
         <button class="btn">Submit</button>
       </div>
+    </section>
   </main>
   <script is:inline src="/portalpw.js"></script>
 </Layout>
