--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -225,13 +225,13 @@ main {
 }
 
 section {
-  &:not(#portal, .split, .split &, .projects & &, .error &) {
+  &:not(.split, .split &, .projects & &, .error &) {
     display: flex;
     // justify-content: center;
     align-items: center;
     flex-direction: column;
   }
-  &:not(.hero, .split, .photos, #portal, .enroll__beta, .error &) {
+  &:not(.hero, .split, .photos, .enroll__beta, .error &) {
     box-shadow: var(--main-shadow);
     border-radius: 25px;
     transition: 500ms ease-in-out;
@@ -250,6 +250,10 @@ section {
     text-transform: uppercase;
     font-weight: 400;
   }
+}
+
+section.login {
+  --bg-color: white;
 }
 
 #menu {
@@ -414,3 +418,4 @@ h1, h2, h3, h4, h5, h6, img, .btn, :is(button, [type="submit"], [type="button"])
 a, :is(button, [type="submit"], [type="button"]) {
   line-height: 1;
 }
+
