--- a/src/pages/portal.astro
+++ b/src/pages/portal.astro
@@ -6,7 +6,7 @@ import '../styles/globals.scss'
 ---
 <Layout title="Member Portal">
   <main id="content" class="portal">
-    <section class="login-parent">
+    <section class="login-parent" id="menu">
       <div class="login">
         <input type="password" id="password" />
         <button class="btn">Submit</button>
