--- a/src/pages/portal.astro
+++ b/src/pages/portal.astro
@@ -6,11 +6,13 @@ import '../styles/globals.scss'
 ---
 <Layout title="Member Portal">
   <main id="content" class="portal">
-    <section class="login-parent" id="menu">
-      <div class="login">
-        <input type="password" id="password" />
-        <button class="btn">Submit</button>
-      </div>
+    <section class="login-parent">
+      <ul id="menu">
+        <div class="login">
+          <input type="password" id="password" />
+          <button class="btn">Submit</button>
+        </div>
+      </ul>
     </section>
   </main>
   <script is:inline src="/portalpw.js"></script>
