--- a/src/pages/portal.astro
+++ b/src/pages/portal.astro
@@ -7,10 +7,11 @@ import '../styles/globals.scss'
 <Layout title="Member Portal">
   <main id="content" class="portal">
     <section class="login-parent">
-        <div class="login">
-          <input type="password" id="password" />
-          <button class="btn">Submit</button>
-        </div>
+      <h2>login</h2>
+      <div class="login">
+        <input type="password" id="password" />
+        <button class="btn">Submit</button>
+      </div>
     </section>
   </main>
   <script is:inline src="/portalpw.js"></script>
