--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import Layout from '../components/Layout.astro';
           <img src="https://user-images.githubusercontent.com/43764894/223559085-8ff69d2f-4247-427f-a3a6-d2036b00082a.png" alt="Netlify plus Astro banner">
         </div>
         <h2>
-          This is a bare-bones Astro project that has everything you need to quickly deploy it to Netlify
+          This is a page made by Tiantian for mb 371
         </h2>
         <div class="bttns">
           <a href="https://app.netlify.com/start/deploy?repository=https://github.com/netlify-templates/astro-quickstart" class="bttn primary">Deploy to Netlify</a>
@@ -22,10 +22,10 @@ import Layout from '../components/Layout.astro';
 			<div class="resource-list">
         <ul>
           <li>
-            <a href="https://ntl.fyi/38O9wmY">Netlify Blog: Astro posts</a>
+            <a href="https://ntl.fyi/38O9wmY">Tiantian mb371 Blog: Astro posts</a>
 					</li>
           <li>
-            <a href="https://ntl.fyi/3KHGtyz">Netlify Docs</a>
+            <a href="https://ntl.fyi/3KHGtyz">Tiantian mb371 Docs</a>
           </li>
           <li>
             <a href="https://docs.astro.build/en/getting-started/">Astro Docs</a>
