create and use miranda.astro

--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -12,6 +12,7 @@ const members = [
   'Beatriz Meneses', 
   'Chloe Mercado', 
   'Esha Mittal', 
+  'Miranda Solis-Rodriguez', 
   'Hanlin Su', 
   'Mia Tucker', 
   'Samantha Wolff', 
