--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -12,7 +12,7 @@ const members = [
   'Beatriz Meneses', 
   'Chloe Mercado', 
   'Esha Mittal', 
-  'Miranda Solis-Rodriguez', 
+  'Robin Solis-Rodriguez', 
   'Hanlin Su', 
   'Mia Tucker', 
   'Samantha Wolff', 
