--- a/src/pages/members/robin.astro
+++ b/src/pages/members/robin.astro
@@ -3,8 +3,8 @@ import defaultBio from './defaultBio.js'
 import updateUserData from './updateUserData.js'
 
 var userData = {
-  username: 'miranda', 
-  name: 'Miranda Solis-Rodriguez',
+  username: 'robin', 
+  name: 'Robin Solis-Rodriguez',
   pronunciation: false, //'Uh-da-r-sh',
   email: {
     g4g: false,
