--- a/src/styles/components/carousel.scss
+++ b/src/styles/components/carousel.scss
@@ -26,11 +26,12 @@
     }
   
     & > .imgs {
-        margin-block: 55px;
+        // margin-block: 55px;
+        --single-column: 1fr;
         flex: 1;
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        column-gap: 80px;
+        grid-template-columns: var(--single-column) calc(var(--single-column)*2) var(--single-column);
+        // column-gap: 80px;
         align-items: center;
         list-style: none;
         padding: 0;
@@ -39,7 +40,7 @@
   
       
         & .active {
-            scale: 1.5;
+            // scale: 1.5;
             z-index: 2;
         }
         & :not(.active) {
