--- a/src/styles/components/carousel.scss
+++ b/src/styles/components/carousel.scss
@@ -66,12 +66,11 @@
             --shadow-size: 25px;
             --shadow-color: var(--orig-bg-color);  
             box-shadow: var(--shadow-color, var(--orig-bg-color)) 0px 0px var(--shadow-size);
-            transition: 500ms ease-in;
+            transition: 250ms ease-in-out;
             border-radius: 25px;
             cursor: pointer;
   
             &:hover {
-                transition: 500ms ease-out;
                 border-radius: 10px;
             }
         }
