--- a/src/pages/members/cedrus.astro
+++ b/src/pages/members/cedrus.astro
@@ -3,21 +3,18 @@ import defaultBio from './defaultBio.js'
 import updateUserData from './updateUserData.js'
 
 var userData = {
-  username: 'bridget', 
-  name: 'Bridget Won',
-  role: {
-    name: 'avid designer and member', 
-  }, 
+  username: 'src/pages/members/beatriz.astro', 
+  name: 'Cedrus Fink',
   pronunciation: false, //'Uh-da-r-sh',
   email: {
     g4g: false,
     dtech: {
-      year: 26,
+      year: 27,
     },
   }, 
   pfp: {
     google: {
-      url: 'ACg8ocKApyLfnx8wws_Q7ns3cMQl38XM14Eg-rXj2s_6trKtlwg',
+      url: 'src/pages/members/beatriz.astro',
     }, 
   },
   location: {
@@ -25,8 +22,7 @@ var userData = {
     state: '',
   }, 
   bio: {
-    w1: 'an', 
-    end: "Most of the time, you'll catch her doing schoolwork or at practice for cross country, but occasionally, you'll see her indulge herself in the world of digital art or baking an ungodly amount of sweets."
+    
   }, 
   socials: [],
   portfolio: [],
