--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -6,7 +6,7 @@ const members = [
   'Isabelle Anderson <span id="tag">(Website Assistant)</span>', 
   'Amelia Chang', 
   'Luce Dittrich', 
-  'Luce Dittrich', 
+  'Cedrus Fink', 
   // 'Rien (Rick) Gupta', 
   // 'Maya Heiss', 
   'Jeremy Hasan', 
