--- a/src/pages/members/cedrus.astro
+++ b/src/pages/members/cedrus.astro
@@ -3,7 +3,7 @@ import defaultBio from './defaultBio.js'
 import updateUserData from './updateUserData.js'
 
 var userData = {
-  username: 'src/pages/members/beatriz.astro', 
+  username: 'cedrus', 
   name: 'Cedrus Fink',
   pronunciation: false, //'Uh-da-r-sh',
   email: {
@@ -14,7 +14,7 @@ var userData = {
   }, 
   pfp: {
     google: {
-      url: 'src/pages/members/beatriz.astro',
+      url: 'ACg8ocLUqJIqGVQ1ld0MpYt1CQDE94Cxfw7RhxPUXZ_1RSTExH0',
     }, 
   },
   location: {
