--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,7 +32,7 @@ if (dTitle.startsWith(' | ') || dTitle.startsWith('Home | ')) dTitle = dTitle.sp
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="image" content={pImg}>
-    <meta property="description" content={decription}>
+    <meta property="description" content={description}>
     <meta property="og:description" content={description}>
     <meta property="og:image" content={pImg}>
     <meta property="og:url" content={sUrl}> 
