bring back and use esha.astro

--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -12,7 +12,7 @@ const members = [
   'Jeremy Hasan', 
   'Beatriz Meneses', 
   'Chloe Mercado', 
-  // 'Esha Mittal', 
+  'Esha Mittal', 
   'Robin Solis-Rodriguez', 
   'Hanlin Su', 
   'Mia Tucker', 
