--- a/src/components/memberPageTemplate.astro
+++ b/src/components/memberPageTemplate.astro
@@ -1,7 +1,7 @@
 ---
+import Layout from '../../layouts/Layout.astro'
 
 const { userData } = Astro.props
-
 ---
 
 <Layout title={userData.nameNoTitle}>
