--- a/src/components/memberPageTemplate.astro
+++ b/src/components/memberPageTemplate.astro
@@ -7,10 +7,10 @@ const { userData } = Astro.props
 <Layout title={userData.nameNoTitle}>
     <main id="content" class="profile">
       <section>
-        <span id="pfp" style={`background-image: url('${userData.pfp.url}')`}></span>
-        <h1 id="name">{userData.nameNoTitle}</h1>
-        <a id="email" href={`mailto:${userData.email.address}`}>{userData.email.address}</a>
-        <a id="location" href={userData.location.mapLink}>
+        <img class="pfp" id="pfp" src={userData.pfp.url}></span>
+        <h1 class="name" id="name">{userData.nameNoTitle}</h1>
+        <a class="email" id="email" href={`mailto:${userData.email.address}`}>{userData.email.address}</a>
+        <a class="location" id="location" href={userData.location.mapLink}>
           <div></div>
           <span>{userData.location.combined}</span>
         </a>
